<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity">

    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent" android:textSize="32sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/label_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textStyle="bold" android:textSize="32dp"
            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/label_sub_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:id="@+id/textView4" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etHome"
            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView4" android:hint="@string/hint_player1"
            android:background="@color/background_home" style="@style/home_imput"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etAway"
            app:layout_constraintEnd_toEndOf="@+id/etHome" app:layout_constraintStart_toStartOf="@+id/etHome"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/hint_player2"
            android:background="@color/background_visitante" style="@style/home_imput"
            app:layout_constraintTop_toBottomOf="@+id/etHome" android:layout_marginTop="20dp"/>
    <Button
            style="@style/custom_button"
            android:text="@string/button_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btStart" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="296dp"
            app:layout_constraintTop_toBottomOf="@+id/etAway" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btStart"/>
</androidx.constraintlayout.widget.ConstraintLayout>